--- a/betaFour/index.html
+++ b/betaFour/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
     <title>Four Projects</title>
 </head>
 
@@ -27,7 +27,7 @@
                 <div class="row">
                     <div class="col-md-12 d-flex justify-content-center align-items-center">
                         <div class="imgbox d-flex justify-content-center align-items-center">
-                            <img src="/assets/logo.png" alt="">
+                            <img src="./assets/logo.png" alt="">
                         </div>
                     </div>
                 </div>
