--- a/betaFour/index.html
+++ b/betaFour/index.html
@@ -31,6 +31,13 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-12 d-flex justify-content-center">
+                        <div class="textbox">
+                            <h1 id="movingText">loading soon...</h1>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
